use local REST api

--- a/docker/.env.sample
+++ b/docker/.env.sample
@@ -22,4 +22,4 @@ COSMOS_INSTANCE=${INSTANCE_IP}:${COSMOS_EXPORTER_PORT}
 CHAIN_ID=testcorn-69
 
 # Rest endpoint to gather consensus metrics related to your validator
-REST_ENDPOINT=https://rest.testcorn-69.unicorn.meme
+REST_ENDPOINT=http://${INSTANCE_IP}:1317 # alternatively, you can use a public rest endpoint e.g. https://rest.testcorn-69.unicorn.meme
