rely on port var

--- a/docker/.env.sample
+++ b/docker/.env.sample
@@ -9,6 +9,7 @@ VALOPER=
 # Ports for exporters
 NODE_EXPORTER_PORT=9100
 COSMOS_EXPORTER_PORT=26660
+REST_API_PORT=1317
 
 # Grafana credentials
 GRAFANA_ADMIN_USER=admin
@@ -18,8 +19,8 @@ GRAFANA_ADMIN_PASSWORD=admin
 NODE_INSTANCE=${INSTANCE_IP}:${NODE_EXPORTER_PORT}
 COSMOS_INSTANCE=${INSTANCE_IP}:${COSMOS_EXPORTER_PORT}
 
+# Rest endpoint to gather consensus metrics related to your validator
+REST_ENDPOINT=http://${INSTANCE_IP}:${REST_API_PORT} # alternatively, you can use a public rest endpoint e.g. https://rest.testcorn-69.unicorn.meme
+
 # Unicorn CHAIN_ID
 CHAIN_ID=testcorn-69
-
-# Rest endpoint to gather consensus metrics related to your validator
-REST_ENDPOINT=http://${INSTANCE_IP}:1317 # alternatively, you can use a public rest endpoint e.g. https://rest.testcorn-69.unicorn.meme
