--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   prometheus:
     image: prom/prometheus
     volumes:
+      - prometheus_data:/prometheus
       - ../prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     network_mode: "host"
     command:
@@ -19,6 +20,7 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
       - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
+      - grafana_data:/var/lib/grafana
       - ../grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
       - ../grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
       - ../grafana/dashboards:/var/lib/grafana/dashboards
@@ -33,3 +35,7 @@ services:
       - VALOPER=${VALOPER}
       - REST_ENDPOINT=${REST_ENDPOINT}
     network_mode: "host"
+
+volumes:
+  prometheus_data:
+  grafana_data:
